--- a/style.css
+++ b/style.css
@@ -2,13 +2,20 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 header {
   color: azure;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 150px;
 }
 
 h1 {
@@ -21,11 +28,17 @@ h1 {
 
 .navbar a {
   color: azure;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 .navbar a:hover {
-  background-color: blueviolet;
+  background-color: rgb(4, 157, 252);
+  font-weight: bolder;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: rgb(253, 253, 253);
+  margin: 20px;
+  border-radius: 10px;
 }
 
 body {
@@ -33,37 +46,62 @@ body {
   background-image: url(./assets/img/Firefly\ 20241221175656.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
 }
 
-form {
-  background-color: black;
+form.form-example {
+  border: 4mm solid rgba(72, 71, 71, 0.7);
+  font-size: 10px;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.75);
   display: table;
   flex-direction: column;
+  padding: 0px;
+  width: 400px;
+  max-width: 800px;
+  box-shadow: 10px 10px rgba(255, 254, 254, 0.673);
 }
 
 div.form-example {
-  display: table-row;
+  margin: 0;
+  justify-content: center;
 }
 
 label,
 input {
-  display: table-cell;
-  margin-bottom: 10px;
+  font-size: 30px;
+  margin: 30px;
+}
+
+div input {
+  margin: auto;
+  display: flex;
+}
+
+div input:hover {
+    border-color: rgb(0, 217, 255);
 }
 
 label {
-  padding-right: 10px;
+  padding-left: auto;
 }
 
 footer {
-  background-color: black;
+  margin-top: 150px;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 20px 20px;
 }
 
-footer h2 {
+footer h1 {
   margin-left: 50px;
 }
 
@@ -71,5 +109,16 @@ footer a {
   font-size: 30px;
   color: azure;
   text-align: center;
-  margin-right: 500px;
+  margin-right: 50px;
+  padding: 20px;
+}
+
+footer a:hover {
+  background-color: rgb(4, 157, 252);
+  font-weight: bolder;
+  font-size: 30px;
+  text-transform: uppercase;
+  color: rgb(253, 253, 253);
+  margin: 20px;
+  border-radius: 10px;
 }
